--- a/teacher_attendance.html
+++ b/teacher_attendance.html
@@ -2,45 +2,57 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>نظام OMA - حضور وغياب</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>حضور وغياب الأساتذة - OMA</title>
 <style>
-body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;}
-header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
+:root{
+  --primary:#004aad;
+  --accent:#ffcc33;
+  --bg:#f5f9ff;
+  --card:#fff;
+}
+body{
+  font-family:'Cairo',sans-serif;
+  margin:0;background:linear-gradient(180deg,var(--bg),#fff);color:#102027;direction:rtl;
+}
+header{background:linear-gradient(90deg,var(--primary),#007bff);color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
-.card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
-table{width:100%;border-collapse:collapse;margin-top:12px;}
-th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
-th{background:#004aad;color:#fff;}
-.checkbox{width:18px;height:18px;}
-.btn{background:#004aad;color:#fff;padding:8px 12px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
+.card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
+table{width:100%;border-collapse:collapse;margin-top:12px}
+th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px}
+th{background:var(--primary);color:#fff}
+.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700}
+.btn.warn{background:#ff7043}
+.btn.ghost{background:transparent;color:var(--primary);border:1px solid rgba(0,74,173,0.12)}
+.checkbox{width:18px;height:18px}
 @media print{
-  body{background:white;}
-  header,.filters,.actions{display:none !important;}
+  body{background:white;padding:0}
+  header, .controls, .actions { display:none !important; }
+  .print-page{box-shadow:none;margin:0;padding:0}
 }
 </style>
 </head>
 <body>
-<header>نظام OMA - حضور وغياب الطلاب</header>
+<header>نظام OMA - حضور وغياب الأستاذ</header>
 <div class="wrap">
-<div class="card">
-  <strong>اختر الحصة</strong>
-  <select id="classSelect"></select>
-</div>
-<div class="card">
-  <strong>الطلاب المسجلون</strong>
-  <table id="attendanceTable">
-    <thead>
-      <tr>
-        <th>الاسم</th>
-        <th>حاضر</th>
-        <th>غائب</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-  <button id="saveAttendanceBtn" class="btn" style="margin-top:10px;">💾 حفظ الحضور</button>
-</div>
+  <div class="card">
+    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
+      <strong>طلابك حسب المادة والكروب</strong>
+      <button id="printAttendance" class="btn">🖨️ طباعة الحضور</button>
+    </div>
+    <table id="attendanceTable">
+      <thead>
+        <tr>
+          <th>الاسم</th>
+          <th>المجموعة</th>
+          <th>المادة</th>
+          <th>الحضور</th>
+          <th>الغياب</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 </div>
 
 <script type="module">
@@ -59,53 +71,71 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-const classSelect = document.getElementById("classSelect");
+// استدعاء بيانات المستخدم
+const userType = localStorage.getItem("userType");
+const userName = localStorage.getItem("userName");
+
+if(userType !== "teacher"){ alert("ليس لديك صلاحية الوصول لهذه الصفحة"); window.location.href = "index.html"; }
+
 const attendanceTableBody = document.querySelector("#attendanceTable tbody");
-let classesData = [], selectedClass=null;
 
-// تحميل الحصص
-async function loadClasses(){
-  const snapshot = await getDocs(collection(db,"classes"));
-  classSelect.innerHTML="<option value=''>اختر الحصة</option>";
-  classesData = [];
-  snapshot.forEach(docSnap=>{
-    const c = {...docSnap.data(),id:docSnap.id};
-    classesData.push(c);
-    classSelect.innerHTML+=`<option value="${c.id}">${c.subjectId} - ${c.group} - ${c.day} ${c.time}</option>`;
-  });
-}
-loadClasses();
+// تحميل الطلاب الذين يدرسهم الأستاذ
+async function loadTeacherStudents() {
+  const snapshot = await getDocs(collection(db,"students"));
+  attendanceTableBody.innerHTML = "";
+  snapshot.forEach(docSnap => {
+    const student = {...docSnap.data(), id: docSnap.id};
+    student.subjects.forEach(sub => {
+      if(sub.teacher === userName){
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${student.name}</td>
+          <td>${student.group}</td>
+          <td>${sub.name}</td>
+          <td><input type="checkbox" class="present" data-student="${student.id}" data-subject="${sub.name}"></td>
+          <td><input type="checkbox" class="absent" data-student="${student.id}" data-subject="${sub.name}"></td>
+        `;
+        attendanceTableBody.appendChild(tr);
 
-classSelect.addEventListener("change",()=>{
-  const classId = classSelect.value;
-  selectedClass = classesData.find(c=>c.id===classId);
-  if(!selectedClass){attendanceTableBody.innerHTML=""; return;}
-  renderAttendance(selectedClass);
-});
-
-function renderAttendance(cls){
-  attendanceTableBody.innerHTML="";
-  cls.students.forEach(s=>{
-    attendanceTableBody.innerHTML+=`
-      <tr>
-        <td>${s.name}</td>
-        <td><input type="checkbox" class="checkbox present" data-id="${s.id}"></td>
-        <td><input type="checkbox" class="checkbox absent" data-id="${s.id}"></td>
-      </tr>
-    `;
+        // التأكد من أنه لا يمكن اختيار حضور وغياب في نفس الوقت
+        const presentChk = tr.querySelector(".present");
+        const absentChk = tr.querySelector(".absent");
+        presentChk.addEventListener("change",()=>{if(presentChk.checked) absentChk.checked=false;});
+        absentChk.addEventListener("change",()=>{if(absentChk.checked) presentChk.checked=false;});
+      }
+    });
   });
 }
 
-// حفظ الحضور
-document.getElementById("saveAttendanceBtn").addEventListener("click", async()=>{
-  if(!selectedClass) return;
-  const updatedAttendance = selectedClass.students.map(s=>{
-    const present = document.querySelector(`.present[data-id='${s.id}']`).checked;
-    const absent = document.querySelector(`.absent[data-id='${s.id}']`).checked;
-    return {studentId:s.id,status:present?"حاضر":absent?"غائب":"غير محدد",date:new Date()};
-  });
-  await updateDoc(doc(db,"classes",selectedClass.id),{attendance:updatedAttendance});
-  alert("تم حفظ الحضور بنجاح");
+loadTeacherStudents();
+
+// حفظ الحضور والغياب مباشرة إلى الطالب
+async function saveAttendance() {
+  const rows = attendanceTableBody.querySelectorAll("tr");
+  for(const row of rows){
+    const studentId = row.querySelector(".present").dataset.student;
+    const subjectName = row.querySelector(".present").dataset.subject;
+    const present = row.querySelector(".present").checked;
+    const absent = row.querySelector(".absent").checked;
+
+    const studentRef = doc(db,"students",studentId);
+    const studentSnap = await getDocs(collection(db,"students"));
+    const studentDoc = await getDocs(doc(db,"students",studentId));
+    
+    // تحديث الدفع في نفس الطالب (إضافة الحضور)
+    await updateDoc(studentRef, {
+      subjects: firebase.firestore.FieldValue.arrayUnion({
+        name: subjectName,
+        attendance: present ? "حاضر" : absent ? "غائب" : "غير محدد"
+      })
+    });
+  }
+  alert("تم حفظ الحضور والغياب بنجاح");
+}
+
+// زر الطباعة
+document.getElementById("printAttendance").addEventListener("click",()=>{
+  window.print();
 });
 </script>
 </body>
