--- a/login.html
+++ b/login.html
@@ -5,74 +5,66 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>تسجيل الدخول - نظام OMA</title>
 <style>
-body {
+  body {
     font-family: 'Cairo', sans-serif;
-    background: linear-gradient(180deg,#f5f9ff,#fff);
-    display:flex; justify-content:center; align-items:center; height:100vh; margin:0;
-}
-.card {
-    background:white; padding:24px; border-radius:10px;
-    box-shadow:0 6px 18px rgba(0,0,0,0.08); width:320px;
-}
-h2 { text-align:center; color:#004aad; }
-input[type="email"], input[type="password"]{
-    width:100%; padding:10px; margin:10px 0; border-radius:8px; border:1px solid #ccc;
-}
-.btn{
-    width:100%; padding:10px; background:#004aad; color:white; border:none; border-radius:8px; cursor:pointer; font-weight:700;
-}
-.alert { color:red; font-size:13px; display:none; margin-top:8px; text-align:center; }
+    display:flex; justify-content:center; align-items:center;
+    height:100vh; margin:0; background:#f5f9ff;
+  }
+  .login-box {
+    background:#fff; padding:30px; border-radius:12px;
+    box-shadow:0 6px 18px rgba(0,0,0,0.1); width:320px;
+  }
+  input { width:100%; padding:10px; margin:10px 0; border-radius:8px; border:1px solid #ccc; }
+  button { width:100%; padding:10px; background:#004aad; color:white; border:none; border-radius:8px; cursor:pointer; }
+  p#error { color:red; font-size:13px; text-align:center; }
 </style>
 </head>
 <body>
-<div class="card">
-    <h2>تسجيل الدخول</h2>
-    <input id="email" type="email" placeholder="البريد الإلكتروني" required />
-    <input id="password" type="password" placeholder="كلمة المرور" required />
-    <button id="loginBtn" class="btn">دخول</button>
-    <div id="alert" class="alert">بيانات غير صحيحة</div>
+
+<div class="login-box">
+  <h2 style="text-align:center">تسجيل الدخول</h2>
+  <input type="email" id="email" placeholder="البريد الإلكتروني" required>
+  <input type="password" id="password" placeholder="كلمة المرور" required>
+  <button id="loginBtn">تسجيل الدخول</button>
+  <p id="error"></p>
 </div>
 
+<!-- Firebase SDK -->
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
-import { getFirestore, collection, getDocs, query, where } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
-const firebaseConfig = {
-  apiKey: "API_KEY_HERE",
-  authDomain: "PROJECT_ID.firebaseapp.com",
-  projectId: "PROJECT_ID",
-  storageBucket: "PROJECT_ID.appspot.com",
-  messagingSenderId: "SENDER_ID",
-  appId: "APP_ID"
-};
+  // إعداد Firebase
+  const firebaseConfig = {
+    apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
+    authDomain: "oma2-d36fa.firebaseapp.com",
+    projectId: "oma2-d36fa",
+    storageBucket: "oma2-d36fa.firebasestorage.app",
+    messagingSenderId: "774171603105",
+    appId: "1:774171603105:web:b6b12f5b6fa25a134080e0",
+    measurementId: "G-X68V04QGK3"
+  };
 
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
 
-const loginBtn = document.getElementById("loginBtn");
-const alertBox = document.getElementById("alert");
+  const loginBtn = document.getElementById('loginBtn');
+  const errorMsg = document.getElementById('error');
 
-loginBtn.addEventListener("click", async () => {
-    const email = document.getElementById("email").value.trim();
-    const password = document.getElementById("password").value.trim();
-
-    if (!email || !password) return;
-
-    const usersRef = collection(db, "users");
-    const q = query(usersRef, where("email", "==", email), where("password", "==", password));
-    const snapshot = await getDocs(q);
-
-    if (!snapshot.empty) {
-        const user = snapshot.docs[0].data();
-        // الدور: admin, teacher, student
-        if(user.role === "admin") window.location.href = "index.html"; // لوحة الإدارة
-        else if(user.role === "teacher") window.location.href = "teacher_attendance.html"; // صفحة الأستاذ
-        else if(user.role === "student") window.location.href = "student_dashboard.html"; // صفحة الطالب (يمكن إنشاؤها لاحقًا)
-    } else {
-        alertBox.style.display = "block";
-        setTimeout(()=> alertBox.style.display = "none", 3000);
+  loginBtn.addEventListener('click', async () => {
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('password').value.trim();
+    
+    try {
+      await signInWithEmailAndPassword(auth, email, password);
+      // تحويل إلى لوحة الإدارة بعد تسجيل الدخول
+      window.location.href = 'index.html';
+    } catch (err) {
+      errorMsg.innerText = 'خطأ في البريد الإلكتروني أو كلمة المرور';
+      console.error(err);
     }
-});
+  });
 </script>
+
 </body>
 </html>
