--- a/dashboard.html
+++ b/dashboard.html
@@ -1,181 +1,125 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>لوحة تحكم OMA - الإدارة</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>لوحة التحكم - نظام OMA</title>
 <style>
-:root{
-  --primary:#004aad;
-  --accent:#ffcc33;
-  --bg:#f5f9ff;
-  --card:#fff;
+:root {
+  --primary: #004aad;
+  --accent: #ffcc33;
+  --bg: #f5f9ff;
+  --card: #fff;
 }
-body{font-family:'Cairo',sans-serif;margin:0;background:var(--bg);color:#102027;direction:rtl;}
-header{background:linear-gradient(90deg,var(--primary),#007bff);color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;box-shadow:0 3px 12px rgba(2,20,40,0.08);}
-.wrap{max-width:1200px;margin:20px auto;padding:12px;}
-.card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);margin-bottom:16px;}
-h2{margin-top:0;color:var(--primary);}
-button{cursor:pointer;}
-table{width:100%;border-collapse:collapse;margin-top:12px;}
-th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
-th{background:var(--primary);color:#fff;}
-.actions button{margin:0 6px;}
-.btn{background:var(--primary);color:#fff;padding:8px 12px;border:none;border-radius:8px;font-weight:700;}
-.btn.warn{background:#ff7043;}
-.btn.ghost{background:transparent;color:var(--primary);border:1px solid rgba(0,74,173,0.12);}
-@media print{
-  body{background:white;padding:0;}
-  header,.card .controls,.actions,.filters,.modal{display:none !important;}
-  .print-page{box-shadow:none;margin:0;padding:0;}
+body {
+  margin: 0;
+  font-family: 'Cairo', sans-serif;
+  background: var(--bg);
+  direction: rtl;
 }
-.modal{position:fixed;left:0;top:0;right:0;bottom:0;background:rgba(0,0,0,0.45);display:none;align-items:center;justify-content:center;z-index:9999;}
-.modal.open{display:flex;}
-.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto;}
-.flex{display:flex;gap:8px;align-items:center;}
+header {
+  background: linear-gradient(90deg, var(--primary), #007bff);
+  color: white;
+  padding: 15px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+.container {
+  max-width: 900px;
+  margin: 40px auto;
+  padding: 20px;
+}
+.card {
+  background: var(--card);
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 6px 16px rgba(0,0,0,0.08);
+  text-align: center;
+}
+h2 {
+  color: var(--primary);
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 16px;
+  margin-top: 20px;
+}
+.btn {
+  background: var(--primary);
+  color: white;
+  border: none;
+  padding: 12px;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.btn:hover {
+  background: #003a8c;
+}
+.logout {
+  background: #ff5b5b;
+}
+.logout:hover {
+  background: #d84343;
+}
+footer {
+  text-align: center;
+  margin-top: 50px;
+  color: #777;
+  font-size: 14px;
+}
 </style>
 </head>
 <body>
-<header>لوحة تحكم OMA - الإدارة</header>
-<div class="wrap">
+<header>🎓 نظام OMA لإدارة المعاهد - لوحة التحكم</header>
 
-<!-- قسم إدارة الطلاب -->
-<div class="card" id="studentsSection">
-  <h2>إدارة الطلاب</h2>
-  <div class="controls">
-    <button id="addStudentBtn" class="btn">➕ إضافة طالب جديد</button>
-    <button id="printStudentsBtn" class="btn">🖨️ طباعة قائمة الطلاب</button>
-  </div>
-  <table id="studentsTable">
-    <thead>
-      <tr>
-        <th>الاسم</th>
-        <th>الهاتف</th>
-        <th>المجموعة</th>
-        <th>المواد</th>
-        <th>الأقساط</th>
-        <th>الخيارات</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
-<!-- قسم إدارة الأساتذة -->
-<div class="card" id="teachersSection">
-  <h2>إدارة الأساتذة</h2>
-  <div class="controls">
-    <button id="addTeacherBtn" class="btn">➕ إضافة أستاذ جديد</button>
-    <button id="printTeachersBtn" class="btn">🖨️ طباعة استمارات الأساتذة</button>
-  </div>
-  <table id="teachersTable">
-    <thead>
-      <tr>
-        <th>الاسم</th>
-        <th>المواد</th>
-        <th>المدفوعات المستلمة</th>
-        <th>المتبقي</th>
-        <th>الخيارات</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
-<!-- قسم إدارة الحصص -->
-<div class="card" id="classesSection">
-  <h2>إدارة الحصص والدروس</h2>
-  <div class="controls">
-    <button id="addClassBtn" class="btn">➕ إضافة حصة جديدة</button>
-  </div>
-  <table id="classesTable">
-    <thead>
-      <tr>
-        <th>المادة</th>
-        <th>الأستاذ</th>
-        <th>المجموعة</th>
-        <th>اليوم / الوقت</th>
-        <th>الحضور</th>
-        <th>الخيارات</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
-<!-- المودال -->
-<div id="modal" class="modal" aria-hidden="true">
-  <div class="box">
-    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
-      <strong id="modalTitle">تفاصيل</strong>
-      <button id="closeModal" class="btn ghost">إغلاق</button>
+<div class="container">
+  <div class="card">
+    <h2>مرحباً بك في لوحة الإدارة 👋</h2>
+    <p id="userEmail" style="color:#444;margin-top:-8px"></p>
+    <div class="grid">
+      <button class="btn" onclick="goTo('students.html')">👨‍🎓 إدارة الطلاب</button>
+      <button class="btn" onclick="goTo('teachers.html')">👨‍🏫 إدارة الأساتذة</button>
+      <button class="btn" onclick="goTo('classes.html')">📚 إدارة الحصص</button>
+      <button class="btn" onclick="goTo('teacher_attendance.html')">🕓 الحضور والغياب</button>
+      <button class="btn" onclick="goTo('settings.html')">⚙️ الإعدادات</button>
+      <button class="btn logout" onclick="logout()">🚪 تسجيل الخروج</button>
     </div>
-    <div id="modalBody"></div>
   </div>
 </div>
+
+<footer>© 2025 نظام OMA - جميع الحقوق محفوظة</footer>
 
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+import { initializeApp } from "./firebase-config.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
-const firebaseConfig = {
-  apiKey: "API_KEY_HERE",
-  authDomain: "PROJECT_ID.firebaseapp.com",
-  projectId: "PROJECT_ID",
-  storageBucket: "PROJECT_ID.appspot.com",
-  messagingSenderId: "SENDER_ID",
-  appId: "APP_ID"
+const auth = getAuth(initializeApp);
+
+// التحقق من حالة تسجيل الدخول
+onAuthStateChanged(auth, (user) => {
+  if (!user) {
+    window.location.href = "login.html"; // إذا لم يكن مسجلاً، يرجع لصفحة الدخول
+  } else {
+    document.getElementById("userEmail").textContent = "المستخدم: " + user.email;
+  }
+});
+
+// الانتقال إلى صفحات النظام
+window.goTo = (page) => {
+  window.location.href = page;
 };
 
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-
-// ================== الطلاب ==================
-const studentsTableBody = document.querySelector("#studentsTable tbody");
-
-// تحميل الطلاب
-async function loadStudents(){
-  const snapshot = await getDocs(collection(db,"students"));
-  studentsTableBody.innerHTML="";
-  snapshot.forEach(docSnap=>{
-    const student = {...docSnap.data(),id:docSnap.id};
-    const tr = document.createElement("tr");
-    tr.innerHTML = `
-      <td>${student.name}</td>
-      <td>${student.phone}</td>
-      <td>${student.group}</td>
-      <td>${student.subjects.map(s=>s.name).join(", ")}</td>
-      <td>${student.subjects.map(s=>"إجمالي:"+s.fee+" / المتبقي:"+s.remaining).join("<br>")}</td>
-      <td class="actions">
-        <button class="btn small" onclick="showStudent('${student.id}')">🔍 عرض</button>
-        <button class="btn warn small" onclick="deleteStudent('${student.id}')">🗑️ حذف</button>
-      </td>
-    `;
-    studentsTableBody.appendChild(tr);
-  });
-}
-loadStudents();
-
-// حذف طالب
-async function deleteStudent(id){
-  if(confirm("هل تريد حذف الطالب؟")){
-    await deleteDoc(doc(db,"students",id));
-    loadStudents();
+// تسجيل الخروج
+window.logout = async () => {
+  if (confirm("هل تريد تسجيل الخروج؟")) {
+    await signOut(auth);
+    window.location.href = "login.html";
   }
-}
-
-// عرض تفاصيل الطالب
-function showStudent(id){
-  const snapshot = studentsTableBody.querySelectorAll("tr");
-  const studentRow = Array.from(snapshot).find(tr=>tr.querySelector(".actions button").getAttribute("onclick").includes(id));
-  document.getElementById("modalBody").innerHTML = studentRow.innerHTML;
-  document.getElementById("modal").classList.add("open");
-}
-document.getElementById("closeModal").addEventListener("click",()=>{document.getElementById("modal").classList.remove("open")});
-
-// الطباعة
-document.getElementById("printStudentsBtn").addEventListener("click",()=>{window.print();});
-
+};
 </script>
 </body>
 </html>
