--- a/login.html
+++ b/login.html
@@ -1,67 +1,146 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>تسجيل الدخول - نظام OMA</title>
 <style>
-  body {
-    font-family: 'Cairo', sans-serif;
-    background: #f5f9ff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-  }
-  .login-box {
-    background: #fff;
-    padding: 24px 32px;
-    border-radius: 12px;
-    box-shadow: 0 6px 18px rgba(6,20,30,0.06);
-    width: 320px;
-  }
-  h2 { text-align:center; color:#004aad; }
-  input { width:100%; padding:10px; margin:8px 0; border-radius:8px; border:1px solid #d6dde9; }
-  button { width:100%; padding:10px; background:#004aad; color:#fff; border:none; border-radius:8px; cursor:pointer; font-weight:700; }
+:root {
+  --primary: #004aad;
+  --accent: #ffcc33;
+  --bg: #f5f9ff;
+  --card: #fff;
+}
+body {
+  margin: 0;
+  font-family: 'Cairo', sans-serif;
+  background: linear-gradient(180deg, #ffffff, #f5f9ff);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login-box {
+  background: var(--card);
+  padding: 40px;
+  border-radius: 12px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+  text-align: center;
+  width: 320px;
+}
+h2 {
+  margin-bottom: 25px;
+  color: var(--primary);
+}
+input {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 15px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 15px;
+}
+button {
+  background: var(--primary);
+  color: white;
+  border: none;
+  padding: 12px;
+  width: 100%;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+button:hover {
+  background: #003a8c;
+}
+.error {
+  color: red;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+.success {
+  color: green;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+footer {
+  position: fixed;
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
+  color: #888;
+  font-size: 13px;
+}
 </style>
 </head>
 <body>
-<div class="login-box">
-  <h2>تسجيل الدخول</h2>
-  <form id="loginForm">
-    <input type="email" id="email" placeholder="البريد الإلكتروني" required>
-    <input type="password" id="password" placeholder="كلمة المرور" required>
-    <button type="submit">دخول</button>
-  </form>
-</div>
+  <div class="login-box">
+    <h2>تسجيل الدخول 🔐</h2>
+    <p class="error" id="errorMsg"></p>
+    <input type="email" id="email" placeholder="البريد الإلكتروني" required />
+    <input type="password" id="password" placeholder="كلمة المرور" required />
+    <button id="loginBtn">دخول</button>
+  </div>
 
-<script type="module">
-import { app } from "./firebase-config.js";
-import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+  <footer>© 2025 نظام OMA - جميع الحقوق محفوظة</footer>
 
-const auth = getAuth(app);
-const loginForm = document.getElementById("loginForm");
+  <script type="module">
+    import { initializeApp } from "./firebase-config.js";
+    import { 
+      getAuth, 
+      signInWithEmailAndPassword, 
+      onAuthStateChanged 
+    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
-loginForm.addEventListener("submit", async (e) => {
-  e.preventDefault();
-  const email = document.getElementById("email").value.trim();
-  const password = document.getElementById("password").value.trim();
+    const app = initializeApp;
+    const auth = getAuth(app);
 
-  try {
-    await signInWithEmailAndPassword(auth, email, password);
-    window.location.href = "index.html"; // تحويل بعد تسجيل الدخول
-  } catch (err) {
-    alert("خطأ في تسجيل الدخول: " + err.message);
-  }
-});
+    const emailInput = document.getElementById("email");
+    const passwordInput = document.getElementById("password");
+    const loginBtn = document.getElementById("loginBtn");
+    const errorMsg = document.getElementById("errorMsg");
 
-// التأكد من تسجيل الدخول قبل السماح بالوصول للصفحة
-onAuthStateChanged(auth, (user) => {
-  if (user) {
-    window.location.href = "index.html";
-  }
-});
-</script>
+    // 🔹 عند الضغط على زر الدخول
+    loginBtn.addEventListener("click", async () => {
+      const email = emailInput.value.trim();
+      const password = passwordInput.value.trim();
+
+      if (!email || !password) {
+        errorMsg.textContent = "الرجاء إدخال البريد وكلمة المرور.";
+        return;
+      }
+
+      errorMsg.textContent = "";
+
+      try {
+        const userCredential = await signInWithEmailAndPassword(auth, email, password);
+        // ✅ تم تسجيل الدخول بنجاح
+        errorMsg.style.color = "green";
+        errorMsg.textContent = "تم تسجيل الدخول بنجاح...";
+        setTimeout(() => {
+          window.location.href = "dashboard.html";
+        }, 1000);
+      } catch (error) {
+        console.error(error);
+        if (error.code === "auth/user-not-found") {
+          errorMsg.textContent = "البريد الإلكتروني غير مسجل.";
+        } else if (error.code === "auth/wrong-password") {
+          errorMsg.textContent = "كلمة المرور غير صحيحة.";
+        } else if (error.code === "auth/too-many-requests") {
+          errorMsg.textContent = "تم تعطيل الحساب مؤقتًا بسبب محاولات فاشلة. حاول لاحقًا.";
+        } else {
+          errorMsg.textContent = "حدث خطأ أثناء تسجيل الدخول.";
+        }
+      }
+    });
+
+    // 🔒 التحقق من حالة المستخدم: إذا كان مسجل دخول بالفعل
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        window.location.href = "dashboard.html";
+      }
+    });
+  </script>
 </body>
 </html>
