--- a/login.html
+++ b/login.html
@@ -59,6 +59,11 @@ button:hover {
   font-size: 14px;
   margin-bottom: 10px;
 }
+.success {
+  color: green;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
 footer {
   position: fixed;
   bottom: 10px;
@@ -81,7 +86,7 @@ footer {
   <footer>© 2025 نظام OMA - جميع الحقوق محفوظة</footer>
 
   <script type="module">
-    import { app } from "./firebase-config.js"; // ✅ هذا يستدعي التهيئة الصحيحة من ملفك
+    import { app } from "./firebase-config.js";
     import { 
       getAuth, 
       signInWithEmailAndPassword, 
@@ -89,11 +94,20 @@ footer {
     } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
     const auth = getAuth(app);
-
     const emailInput = document.getElementById("email");
     const passwordInput = document.getElementById("password");
     const loginBtn = document.getElementById("loginBtn");
     const errorMsg = document.getElementById("errorMsg");
+
+    // ✅ لا تعيد التوجيه إلا بعد التحقق الكامل
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        console.log("✅ المستخدم مسجل فعلاً:", user.email);
+        window.location.href = "dashboard.html";
+      } else {
+        console.log("❌ لا يوجد مستخدم مسجل حالياً");
+      }
+    });
 
     loginBtn.addEventListener("click", async () => {
       const email = emailInput.value.trim();
@@ -108,6 +122,8 @@ footer {
 
       try {
         const userCredential = await signInWithEmailAndPassword(auth, email, password);
+        const user = userCredential.user;
+        console.log("✅ تسجيل ناجح:", user.email);
         errorMsg.style.color = "green";
         errorMsg.textContent = "تم تسجيل الدخول بنجاح...";
         setTimeout(() => {
@@ -124,13 +140,6 @@ footer {
         } else {
           errorMsg.textContent = "حدث خطأ أثناء تسجيل الدخول.";
         }
-      }
-    });
-
-    // 🔒 منع الدخول المباشر بدون تسجيل
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        window.location.href = "dashboard.html";
       }
     });
   </script>
