--- a/login.html
+++ b/login.html
@@ -59,11 +59,6 @@ button:hover {
   font-size: 14px;
   margin-bottom: 10px;
 }
-.success {
-  color: green;
-  font-size: 14px;
-  margin-bottom: 10px;
-}
 footer {
   position: fixed;
   bottom: 10px;
@@ -86,57 +81,60 @@ footer {
   <footer>© 2025 نظام OMA - جميع الحقوق محفوظة</footer>
 
   <script type="module">
-    import { app } from "./firebase-config.js";
+    // ✅ تهيئة Firebase مباشرة داخل الصفحة
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
     import { 
       getAuth, 
       signInWithEmailAndPassword, 
       onAuthStateChanged 
     } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
+    const firebaseConfig = {
+      apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
+      authDomain: "oma2-d36fa.firebaseapp.com",
+      projectId: "oma2-d36fa",
+      storageBucket: "oma2-d36fa.firebasestorage.app",
+      messagingSenderId: "774171603105",
+      appId: "1:774171603105:web:91f2a5f44c4dde684080e0",
+      measurementId: "G-QHPZG4JLB8"
+    };
+
+    const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+
     const emailInput = document.getElementById("email");
     const passwordInput = document.getElementById("password");
     const loginBtn = document.getElementById("loginBtn");
     const errorMsg = document.getElementById("errorMsg");
 
-    // ✅ لا تعيد التوجيه إلا بعد التحقق الكامل
+    // ✅ التحقق من حالة المستخدم
     onAuthStateChanged(auth, (user) => {
       if (user) {
-        console.log("✅ المستخدم مسجل فعلاً:", user.email);
         window.location.href = "dashboard.html";
-      } else {
-        console.log("❌ لا يوجد مستخدم مسجل حالياً");
       }
     });
 
+    // ✅ عند الضغط على زر الدخول
     loginBtn.addEventListener("click", async () => {
       const email = emailInput.value.trim();
       const password = passwordInput.value.trim();
 
       if (!email || !password) {
-        errorMsg.textContent = "الرجاء إدخال البريد وكلمة المرور.";
+        errorMsg.textContent = "الرجاء إدخال البريد الإلكتروني وكلمة المرور.";
         return;
       }
 
       errorMsg.textContent = "";
-
       try {
         const userCredential = await signInWithEmailAndPassword(auth, email, password);
-        const user = userCredential.user;
-        console.log("✅ تسجيل ناجح:", user.email);
-        errorMsg.style.color = "green";
-        errorMsg.textContent = "تم تسجيل الدخول بنجاح...";
-        setTimeout(() => {
-          window.location.href = "dashboard.html";
-        }, 1000);
+        console.log("✅ تسجيل دخول:", userCredential.user.email);
+        window.location.href = "dashboard.html";
       } catch (error) {
         console.error(error);
         if (error.code === "auth/user-not-found") {
-          errorMsg.textContent = "البريد الإلكتروني غير مسجل.";
+          errorMsg.textContent = "المستخدم غير موجود.";
         } else if (error.code === "auth/wrong-password") {
           errorMsg.textContent = "كلمة المرور غير صحيحة.";
-        } else if (error.code === "auth/too-many-requests") {
-          errorMsg.textContent = "تم تعطيل الحساب مؤقتًا بسبب محاولات فاشلة. حاول لاحقًا.";
         } else {
           errorMsg.textContent = "حدث خطأ أثناء تسجيل الدخول.";
         }
